tools/sddl/assembler/tests/success/push_i32_hex_neg.asm
push.i32 -0xFF
halt
