tools/sddl/assembler/tests/fail/push_i32_overflow.asm
# EXPECT-ERROR: out of range
push.i32 2147483648
halt
